--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,5 +8,6 @@
     <p>Get your MVC greeting <a href="/mvcgreeting">here</a></p>
     <p>Get your RESTful greeting <a href="/greeting">here</a></p>
     <p>Get your file upload demo <a href="/filelist">here</a></p>
+    <p>Get all customers from db <a href="/customer/getall">here</a></p>
 </body>
 </html>
