Hypermedia-based RESTful front end and a JPA-based back end.

--- a/src/main/resources/static/index0.html
+++ b/src/main/resources/static/index0.html
@@ -5,6 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
+    <h4>index.html invalidated by '0' in name to enable Spring to create it automatically with RESTful endpoint links</h4>
+    <p>Get RESTful endpoint links <a href="/">here</a></p>
     <p>Get your MVC greeting <a href="/mvcgreeting">here</a></p>
     <p>Get your RESTful greeting <a href="/greeting">here</a></p>
     <p>Get your file upload demo <a href="/filelist">here</a></p>
