Ascii doctor doc for REST endpoint.

--- a/src/main/resources/static/index0.html
+++ b/src/main/resources/static/index0.html
@@ -11,5 +11,6 @@
     <p>Get your RESTful greeting <a href="/greeting">here</a></p>
     <p>Get your file upload demo <a href="/filelist">here</a></p>
     <p>Get all customers from db <a href="/customer/getall">here</a></p>
+    <p>Get map <a href="/home">here</a></p>
 </body>
 </html>
