JQuery example of rendering data from REST service.

--- a/src/main/resources/static/index0.html
+++ b/src/main/resources/static/index0.html
@@ -12,5 +12,6 @@
     <p>Get your file upload demo <a href="/filelist">here</a></p>
     <p>Get all customers from db <a href="/customer/getall">here</a></p>
     <p>Get map <a href="/home">here</a></p>
+    <p>Get jquery rendering of greeting taken from RESTful greeting <a href="/jquery/index.html">here</a></p>
 </body>
 </html>
